<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/deep_purple">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--custom toolbar-->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_purple"
            android:minHeight="?attr/actionBarSize"
            app:titleTextColor="@android:color/white">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:src="@drawable/ic_arrow_back_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:paddingTop="2dp"
                    android:text="ব্যাবহারকারী রেজিস্ট্রেশন"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>

        <!--register form-->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:backgroundTint="@color/light_purple"
            app:cardCornerRadius="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="24dp">

                <EditText
                    android:id="@+id/name_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="@drawable/ic_bg_edit_txt"
                    android:drawableEnd="@drawable/ic_baseline_info_24"
                    android:hint="@string/name"
                    android:inputType="text"
                    android:paddingStart="12dp"
                    android:paddingEnd="20dp"
                    android:paddingBottom="4dp"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white" />

                <EditText
                    android:id="@+id/mobile_number_editext"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/ic_bg_edit_txt"
                    android:drawableEnd="@drawable/ic_baseline_info_24"
                    android:hint="@string/mobile_number"
                    android:inputType="phone"
                    android:paddingStart="12dp"
                    android:paddingEnd="20dp"
                    android:paddingBottom="4dp"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/ic_bg_edit_txt"
                    android:drawableEnd="@drawable/ic_baseline_info_24"
                    android:hint="@string/email_id"
                    android:inputType="textEmailAddress"
                    android:paddingStart="12dp"
                    android:paddingEnd="20dp"
                    android:paddingBottom="4dp"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/ic_bg_edit_txt"
                    android:drawableEnd="@drawable/ic_baseline_info_24"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingStart="12dp"
                    android:paddingEnd="20dp"
                    android:paddingBottom="4dp"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/ic_bg_edit_txt"
                    android:drawableEnd="@drawable/ic_baseline_info_24"
                    android:hint="@string/reenter_pass"
                    android:inputType="textPassword"
                    android:paddingStart="12dp"
                    android:paddingEnd="20dp"
                    android:paddingBottom="4dp"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white" />

                <Button
                    android:id="@+id/btn_register"
                    android:layout_width="@dimen/_148sdp"
                    android:layout_height="@dimen/_48sdp"
                    android:layout_gravity="center"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/bg_gradient_rec"
                    android:drawableLeft="@drawable/add_user_24"
                    android:drawablePadding="8dp"
                    android:text="@string/register"
                    android:textSize="@dimen/_16sdp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="@dimen/_112sdp"
            android:layout_height="@dimen/_36sdp"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:background="@drawable/bg_gradient_circular"
            android:drawableLeft="@drawable/ic_baseline_login_24"
            android:drawablePadding="8dp"
            android:text="@string/login"
            android:textSize="@dimen/_14sdp" />

    </LinearLayout>

</ScrollView>