<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/deep_purple"
    android:orientation="vertical">

    <!--custom toolbar-->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_purple"
        android:minHeight="?attr/actionBarSize"
        app:titleTextColor="@android:color/white">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/back_imageview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:src="@drawable/ic_arrow_back_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:paddingTop="2dp"
                android:text="পেমেন্ট কনফার্ম"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:backgroundTint="@color/light_purple"
            app:cardCornerRadius="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="24dp">

                <TextView
                    android:id="@+id/payment_instruction"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/payment_confirm_txt1"
                    android:textColor="@color/white"
                    android:textSize="20sp" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/shape_rectangle_white_outline"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="8dp">


                    <TextView
                        android:id="@+id/hotline"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/emoji_happy_20"
                        android:gravity="center"
                        android:text="@string/helpline_number"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/notice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/emoji_dont_20"
                        android:gravity="center"
                        android:text="@string/dont_send_money_from_shop"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                </LinearLayout>


                <TextView
                    android:id="@+id/note"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/payment_confirm_txt2"
                    android:textColor="@color/white"
                    android:textSize="20sp" />


                <EditText
                    android:id="@+id/trx_id_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/ic_bg_edit_txt"
                    android:drawableEnd="@drawable/ic_baseline_info_24"
                    android:hint="bKash TrxID"
                    android:inputType="phone"
                    android:paddingStart="12dp"
                    android:paddingEnd="20dp"
                    android:paddingBottom="4dp"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white" />


                <Button
                    android:id="@+id/confirm_button"
                    android:layout_width="200dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="48dp"
                    android:background="@drawable/bg_gradient_rec"
                    android:drawableLeft="@drawable/ic_confirm_24"
                    android:drawablePadding="8dp"
                    android:text="@string/confirm"
                    android:textSize="20sp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </ScrollView>


</LinearLayout>