<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/deep_purple"
    android:orientation="vertical">

    <!--custom toolbar-->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_purple"
        android:minHeight="?attr/actionBarSize"
        app:titleTextColor="@android:color/white">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:src="@drawable/ic_arrow_back_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="Attention"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>


    <!--register form-->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:backgroundTint="@color/light_purple"
        app:cardCornerRadius="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:paddingTop="4dp"
                android:id="@+id/txt_attention"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/attention_text"
                android:textColor="@color/white"
                android:textSize="20sp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no_account_register"
                android:textColor="@color/white"
                android:textSize="20sp"
                />


            <Button
                android:id="@+id/btn_get_hlp"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="48dp"
                android:background="@drawable/bg_gradient_rec"
                android:drawableLeft="@drawable/ic_baseline_info_24"
                android:drawablePadding="8dp"
                android:text="@string/get_help"
                android:textSize="20sp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>