<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/deep_purple"
    android:orientation="vertical">


    <!--custom toolbar-->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_purple"
        android:minHeight="?attr/actionBarSize"
        app:titleTextColor="@android:color/white">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/back_imageview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:src="@drawable/ic_arrow_back_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:paddingTop="2dp"
                android:text="@string/history"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <!--title bar-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_60sdp"
            android:layout_marginBottom="2dp"
            android:background="@drawable/ic_home_gradient"
            android:gravity="center"
            android:orientation="horizontal">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:gravity="center"
                android:text="@string/history_text"
                android:textColor="@color/white"
                android:textSize="@dimen/_16sdp" />


        </LinearLayout>

        <!--column one-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">

            <!--vip-card-->
            <LinearLayout
                android:id="@+id/tpg_ll"
                android:layout_width="0dp"
                android:layout_height="124dp"
                android:layout_marginEnd="1dp"
                android:layout_weight="1"
                android:background="@color/deep_purple"
                android:onClick="startHistory"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginTop="4dp"
                    android:background="@color/deep_purple"
                    android:padding="8dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/chips_icon" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_marginBottom="4dp"
                    android:text="চিপস"
                    android:textAlignment="center"
                    android:textColor="@color/white" />

            </LinearLayout>

            <!--gullak-->
            <LinearLayout
                android:id="@+id/gullakbreak"
                android:layout_width="0dp"
                android:layout_height="124dp"
                android:layout_marginEnd="1dp"
                android:layout_weight="1"
                android:background="@color/deep_purple"
                android:onClick="startHistory"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginTop="4dp"
                    android:background="@color/deep_purple"
                    android:paddingLeft="8dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/gullak" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_marginBottom="4dp"
                    android:text="@string/gullak"
                    android:textAlignment="center"
                    android:textColor="@color/white" />

            </LinearLayout>

            <!--gold pass-->
            <LinearLayout
                android:id="@+id/gold_pass"
                android:layout_width="0dp"
                android:layout_height="124dp"
                android:layout_weight="1"
                android:background="@color/deep_purple"
                android:onClick="startHistory"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginTop="4dp"
                    android:background="@color/deep_purple"
                    android:paddingRight="18dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/gold_pass" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_marginBottom="4dp"
                    android:text="@string/gold_pass"
                    android:textAlignment="center"
                    android:textColor="@color/white" />

            </LinearLayout>

        </LinearLayout>

        <!--column two-->
        <LinearLayout
            android:id="@+id/playcard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:orientation="horizontal"
            android:weightSum="3">

            <!--gift-card-->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="124dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="1dp"
                android:layout_weight="1"
                android:background="@color/deep_purple"
                android:onClick="startHistory"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginTop="4dp"
                    android:background="@color/deep_purple"
                    android:padding="12dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_google_play" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_marginBottom="4dp"
                    android:text="@string/gift_card"
                    android:textAlignment="center"
                    android:textColor="@color/white" />

            </LinearLayout>

            <!--point-->
            <LinearLayout
                android:id="@+id/point"
                android:layout_width="0dp"
                android:layout_height="124dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="1dp"
                android:layout_weight="1"
                android:background="@color/deep_purple"
                android:onClick="startHistory"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginTop="4dp"
                    android:background="@color/deep_purple"
                    android:padding="12dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_point_48" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_marginBottom="4dp"
                    android:text="পয়েন্ট"
                    android:textAlignment="center"
                    android:textColor="@color/white" />

            </LinearLayout>

            <!--vip-card-->
            <LinearLayout
                android:id="@+id/vip"
                android:layout_width="0dp"
                android:layout_height="124dp"
                android:layout_marginTop="1dp"
                android:layout_weight="1"
                android:background="@color/deep_purple"
                android:onClick="startHistory"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginTop="4dp"
                    android:background="@color/deep_purple"
                    android:scaleType="fitCenter"
                    android:src="@drawable/vip_icon" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_marginBottom="4dp"
                    android:text="@string/vip"
                    android:textAlignment="center"
                    android:textColor="@color/white" />

            </LinearLayout>

        </LinearLayout>

        <!--bottom separator-->
        <View
            android:layout_width="wrap_content"
            android:layout_height="16dp"
            android:background="@color/deep_purple" />

    </LinearLayout>

</LinearLayout>